# orqastudio-app

./: .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  TODO.md  WORKING-DOCUMENT.md  package-lock.json  package.json  test_stderr.txt  vite.config.ts
.claude/: CLAUDE.md
.claude/_backup/: CLAUDE.md.bak
.claude/agents/: documentation-writer.md
.claude/rules/: architecture-decisions.md  dogfood-mode.md  honest-reporting.md  pillar-alignment-docs.md  plan-mode-compliance.md  reusable-components.md  vision-alignment.md
.forge/: project.json
.githooks/: collect-rule-overrides.mjs  pre-commit  validate-artifacts.sh  validate-lint-suppressions.mjs  validate-schema.mjs
.orqa/: project.json
.orqa-backup/: project.json
.orqa-backup/delivery/: README.md
.orqa-backup/documentation/: LICENSE  README.md
.orqa-backup/process/: README.md
.orqa/agents/: agent-maintainer.md  backend-engineer.md  code-reviewer.md  data-engineer.md  debugger.md  designer.md  devops-engineer.md  documentation-writer.md  frontend-engineer.md  orchestrator.md  qa-tester.md  refactor-agent.md  security-engineer.md  systems-architect.md  test-engineer.md  ux-reviewer.md
.orqa/decisions/: AD-017.md  AD-020.md
.orqa/documentation/: README.md
.orqa/epics/: EPIC-001.md  EPIC-005.md  EPIC-018.md  EPIC-032.md
.orqa/governance/: README.md
.orqa/milestones/: MS-001.md
.orqa/planning/: README.md
.orqa/plans/: agent-governance.md  artifact-migration.md  epic-001-ai-transparency.md  epic-005-artifact-browser.md  provider-abstraction.md  self-sustaining-artifacts.md
.orqa/research/: provider-architecture.md
.orqa/rules/: agent-delegation.md  architecture-decisions.md  artifact-lifecycle.md  chunkhound-usage.md  coding-standards.md  development-commands.md  documentation-first.md  end-to-end-completeness.md  error-ownership.md  git-workflow.md  honest-reporting.md  lessons-learned.md  no-aliases-or-hacks.md  no-deferred-deliverables.md  no-stubs.md  plan-mode-compliance.md  required-reading.md  reusable-components.md  root-cleanliness.md  skill-enforcement.md  testing-standards.md  vision-alignment.md
.orqa/tasks/: TASK-001.md  TASK-002.md  TASK-003.md
.orqa/team/: README.md
backend/src-tauri/: Cargo.toml
backend/src-tauri/migrations/: 007_drop_governance_tables.sql  009_drop_artifacts_table.sql  010_health_snapshots_extended.sql
backend/src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  state.rs  watcher.rs
backend/src-tauri/src/cli_tools/: runner.rs
backend/src-tauri/src/commands/: artifact_commands.rs  cli_tool_commands.rs  enforcement_commands.rs  governance_commands.rs  graph_commands.rs  lesson_commands.rs  mod.rs  plugin_commands.rs  project_settings_commands.rs  search_commands.rs  setup_commands.rs  sidecar_commands.rs  status_transition_commands.rs  stream_commands.rs  tool_commands.rs
backend/src-tauri/src/domain/: artifact.rs  artifact_fs.rs  artifact_graph.rs  artifact_reader.rs  enforcement.rs  enforcement_engine.rs  enforcement_parser.rs  governance.rs  governance_scanner.rs  health_snapshot.rs  integrity_engine.rs  knowledge_injector.rs  lessons.rs  mod.rs  paths.rs  platform_config.rs  process_gates.rs  process_state.rs  project_scanner.rs  project_settings.rs  session_title.rs  status_transitions.rs  stream_loop.rs  system_prompt.rs  tool_executor.rs  workflow_tracker.rs
backend/src-tauri/src/hooks/: manager.rs
backend/src-tauri/src/plugins/: collision.rs  discovery.rs  installer.rs  lockfile.rs  manifest.rs  mod.rs  registry.rs
backend/src-tauri/src/repo/: health_snapshot_repo.rs  lesson_repo.rs  mod.rs  project_repo.rs  project_settings_repo.rs
backend/src-tauri/src/search/: mod.rs  store.rs
backend/src-tauri/src/servers/: ipc_socket.rs  lsp.rs  mcp.rs
docs/: _sidebar.md
docs/architecture/: decisions.md  governance-bootstrap.md  ipc-commands.md  project-configuration.md  rust-modules.md  setup-wizard.md  sqlite-schema.md  streaming-pipeline.md  svelte-components.md
docs/development/: coding-standards.md  contributing.md  getting-started.md  lessons.md  phase-1-guide.md
docs/process/: artifact-workflow.md  content-governance.md  definition-of-done.md  definition-of-ready.md  retrospectives.md  rules.md  skills-log.md  team.md  (+1 more)
scripts/: dev-dashboard.html  migration-manifest.json  rebuild-artifacts.mjs
sidecar/: package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  005_title_manually_set.sql
src-tauri/src/: db.rs  error.rs  lib.rs  state.rs  watcher.rs
src-tauri/src/commands/: artifact_commands.rs  enforcement_commands.rs  governance_commands.rs  graph_commands.rs  lesson_commands.rs  message_commands.rs  mod.rs  project_commands.rs  project_settings_commands.rs  search_commands.rs  session_commands.rs  settings_commands.rs  setup_commands.rs  sidecar_commands.rs  stream_commands.rs  theme_commands.rs
src-tauri/src/domain/: artifact.rs  artifact_fs.rs  artifact_reader.rs  enforcement.rs  enforcement_engine.rs  enforcement_parser.rs  governance_analysis.rs  governance_scanner.rs  lessons.rs  mod.rs  paths.rs  process_state.rs  project_scanner.rs  project_settings.rs  provider_event.rs  session.rs  session_title.rs  setup.rs  stream_loop.rs  system_prompt.rs  tool_executor.rs
src-tauri/src/repo/: artifact_repo.rs  enforcement_rules_repo.rs  governance_repo.rs  lesson_repo.rs  message_repo.rs  mod.rs  project_repo.rs  project_settings_repo.rs  session_repo.rs  settings_repo.rs  theme_repo.rs
src-tauri/src/search/: chunker.rs  embedder.rs  mod.rs  store.rs  types.rs
src-tauri/src/sidecar/: manager.rs  mod.rs  protocol.rs  types.rs
src-tauri/test-sidecar/: echo.cjs
tools/: apply-skill-backfill.mjs  backfill-relationships.mjs  check-cognitive-load.mjs  check-orientation.mjs  fix-lesson-order.mjs  verify-links.mjs  verify-pipeline-integrity.mjs  verify-scope-drift.mjs
ui/: app.css  package-lock.json  package.json  vite.config.ts
(+3087 files in other folders)
