[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[package.metadata.tauri]
# tauri build metadata - managed by tauri-build

[[bin]]
name = "forge"
path = "src/main.rs"

[lib]
name = "forge_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rusqlite = { version = "0.33", features = ["bundled"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = { version = "2", features = [] }
tauri-plugin-store = { version = "2", features = [] }
tauri-plugin-window-state = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-notification = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
glob = "0.3"
duckdb = { version = "1", features = ["bundled"] }
ignore = "0.4"
regex = "1"
ort = { version = "2.0.0-rc.11", features = ["directml", "ndarray"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.17"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
