[package]
name = "orqa-studio"
version = "0.1.0"
edition = "2021"

[package.metadata.tauri]
# tauri build metadata - managed by tauri-build

[[bin]]
name = "orqa-studio"
path = "src/main.rs"

[lib]
name = "orqa_studio_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rusqlite = { version = "0.33", features = ["bundled"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = { version = "2", features = [] }
tauri-plugin-store = { version = "2", features = [] }
tauri-plugin-window-state = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-notification = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
glob = "0.3"
duckdb = { version = "1", features = ["bundled"] }
ignore = "0.4"
regex = "1"
ort = { version = "2.0.0-rc.11", features = ["directml", "ndarray"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.17"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
notify = "8"
notify-debouncer-full = "0.6"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Reasonable allows for pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Tauri commands require owned State<> and String params — can't pass by reference
needless_pass_by_value = "allow"
# Doc backtick enforcement is too noisy for mixed prose/code docs
doc_markdown = "allow"
# Numeric casts are pervasive in DB/index/metrics code — explicit try_from everywhere
# would obscure logic. We trust our value ranges (IDs, counts, sizes).
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
